--- a/client/src/app/resource-allocate/resource-allocate.component.html
+++ b/client/src/app/resource-allocate/resource-allocate.component.html
@@ -1,12 +1,14 @@
-<div class="container-fluid py-4">
-    <h1 class="text-center mb-4 text-primary">Allocate Resources</h1>
-    
-    <div class="alert-container" *ngIf="showMessage || showError">
-        <div class="alert" [ngClass]="{'alert-success': isSuccess, 'alert-danger': !isSuccess}">
-            {{ showMessage ? responseMessage : errorMessage }}
+<div class="resource-allocate-container">
+    <div class="container">
+        <h1 class="text-center mb-4 text-primary">Allocate Resources</h1>
+        
+        <div class="alert-container" *ngIf="showMessage || showError">
+            <div class="alert fade-in" [ngClass]="{'alert-success': isSuccess, 'alert-danger': !isSuccess}">
+                {{ showMessage ? responseMessage : errorMessage }}
+            </div>
         </div>
-    </div>
-            <div class="row justify-content-center">
+        
+        <div class="row justify-content-center">
         <div class="col-md-5 mb-4">
             <div class="card shadow-sm">
                 <div class="card-header bg-primary text-white">
@@ -104,9 +106,3 @@
         </div>
     </div>
 </div>
-
-    <!-- Alert Message Popup -->
-
-
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/js/bootstrap.min.js"></script>
