--- a/client/src/app/resource-allocate/resource-allocate.component.scss
+++ b/client/src/app/resource-allocate/resource-allocate.component.scss
@@ -11,8 +11,17 @@
 }
 
 .container {
-  max-width: 1200px;
-  margin: 0 auto;
+  // max-width: 1200px;
+  // margin: 0 auto;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(350px, 2fr));
+  gap: 1.25rem;
+  margin-bottom: 1.5rem;
+
+  @media (max-width: 768px) {
+    grid-template-columns: 2fr;
+    gap: 1rem;
+  }
 }
 
 h1 {
