fixed the cards in add res and allocate res

--- a/client/src/app/add-resource/add-resource.component.html
+++ b/client/src/app/add-resource/add-resource.component.html
@@ -12,7 +12,9 @@
             <button type="button" class="btn-close" (click)="showError = false" aria-label="Close"></button>
         </div>
     </div>
-    <div class="row justify-content-center">
+    
+    <div class="cards-wrapper">
+        <div class="row justify-content-center g-4">
         <div class="col-md-5 mb-4">
             <div class="card shadow-sm">
                 <div class="card-header bg-primary text-white">
@@ -112,7 +114,7 @@
                             [disabled]="currentPage === totalPages">Next</button>
                     </div>
                 </div>
-            </div>
+                        </div>
         </div>
     </div>
 </div>
