--- a/client/src/app/resource-allocate/resource-allocate.component.html
+++ b/client/src/app/resource-allocate/resource-allocate.component.html
@@ -8,7 +8,8 @@
             </div>
         </div>
         
-        <div class="row justify-content-center">
+        <div class="cards-wrapper">
+            <div class="row justify-content-center g-4">
         <div class="col-md-5 mb-4">
             <div class="card shadow-sm">
                 <div class="card-header bg-primary text-white">
@@ -102,6 +103,7 @@
                         <button class="btn btn-sm btn-outline-secondary" (click)="nextPage()" [disabled]="currentPage === totalPages">Next</button>
                     </div>
                 </div>
+            </div>
             </div>
         </div>
     </div>
