--- a/client/src/app/resource-allocate/resource-allocate.component.scss
+++ b/client/src/app/resource-allocate/resource-allocate.component.scss
@@ -11,16 +11,22 @@
 }
 
 .container {
-  // max-width: 1200px;
-  // margin: 0 auto;
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(350px, 2fr));
-  gap: 1.25rem;
-  margin-bottom: 1.5rem;
+  max-width: 1200px;
+  margin: 0 auto;
+}
 
-  @media (max-width: 768px) {
-    grid-template-columns: 2fr;
-    gap: 1rem;
+.cards-wrapper {
+  max-width: 1100px;
+  margin: 0 auto;
+  
+  .row {
+    margin: 0;
+  }
+  
+  .col-md-5 {
+    @media (max-width: 768px) {
+      max-width: 100%;
+    }
   }
 }
 
