--- a/client/src/app/dashbaord/dashbaord.component.scss
+++ b/client/src/app/dashbaord/dashbaord.component.scss
@@ -10,6 +10,13 @@
   }
 }
 
+.btn-margin {
+  margin: 10px;
+}
+.span-empty {
+  min-width: 5px;
+}
+
 // Dashboard Header
 .dashboard-header {
   text-align: center;
