client cancel and complete

--- a/client/src/app/registration/registration.component.html
+++ b/client/src/app/registration/registration.component.html
@@ -83,7 +83,6 @@
             </small>
           </div>
 
-
           <div class="form-group">
             <label class="form-label">Name<span class="required-asterisk">*</span></label>
             <input 
@@ -100,7 +99,7 @@
               class="error-text">
               <i class="bi bi-exclamation-circle"></i> Name is required
             </small>
-            <!-- <small *ngIf="itemForm.get('name')?.hasError('invalidEmailFormat') && itemForm.get('name')?.touched"
+            <!-- <small *ngIf="itemForm.get('name')?.hasError('name') && itemForm.get('name')?.touched"
               class="error-text">
               <i class="bi bi-exclamation-circle"></i> Please enter a valid name
             </small> -->
