--- a/client/src/app/create-event/create-event.component.html
+++ b/client/src/app/create-event/create-event.component.html
@@ -79,7 +79,7 @@
                           </div>
                         </div>
               
-                        <div class="mb-3">
+                        <!-- <div class="mb-3">
                           <label for="status" class="form-label">Status</label>
                           <select id="status" class="form-control" formControlName="status">
                             <option value="" disabled selected>Select status</option>
@@ -89,7 +89,7 @@
                           </select>
                           <div *ngIf="itemForm.get('status')?.hasError('required') && itemForm.get('status')?.touched"
                             class="text-danger">Status is required</div>
-                        </div>
+                        </div> -->
               
                         <div class="d-flex justify-content-start">
                           <button type="submit" class="btn btn-primary">Submit</button>
