--- a/client/src/app/profile/profile.component.scss
+++ b/client/src/app/profile/profile.component.scss
@@ -34,6 +34,28 @@
   font-size: 0.95rem;
 }
 
+.password-requirements{
+  margin-top: 10px;
+  ul {
+    margin: 0;
+    padding: 0 1.5rem;
+    list-style: disc;
+    color: #ef4444;
+    font-size: 0.96rem;
+  }
+  li.satisfied {
+    display: none;
+  }
+}
+
+.form-label {
+  display: block;
+  font-weight: 500;
+  color: #374151;
+  margin-bottom: 0.5rem;
+  font-size: 0.9375rem;
+}
+
 .form-control-plaintext {
   color: #212529;
   padding-left: 0;
