event planner dashboard changed

--- a/client/src/app/dashbaord/dashbaord.component.html
+++ b/client/src/app/dashbaord/dashbaord.component.html
@@ -30,13 +30,13 @@
           <p>Allocations</p>
         </div>
       </div>
-      <div class="stat-card card">
+      <!-- <div class="stat-card card">
         <div class="stat-icon">✅</div>
         <div class="stat-content">
           <h3>{{ activeEvents || 0 }}</h3>
           <p>Active Events</p>
         </div>
-      </div>
+      </div> -->
       <div class="stat-card card">
         <div class="stat-icon">🔔</div>
         <div class="stat-content">
